# bitcoin-arch

./: Cargo.toml
.github/workflows/: rust.yml
base58/: Cargo.toml
base58/src/: lib.rs
opcodes/src/: lib.rs
src/: address.rs  constants.rs  lib.rs  main.rs  network.rs  transaction.rs  types.rs  utils.rs
src/script/: builder.rs  error.rs  instructions.rs  mod.rs  script.rs
transaction/: Cargo.toml
transaction/src/: lib.rs
