[package]
name = "bitcoin-arch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
base64 = "0.22.0"
bitcoin_hashes = "0.13.0"
bech32 = "0.11.0"
hashes = "0.1.9"
base58 = { path = "base58" }
opcodes = { path = "opcodes" }
borsh = { version = "1.4.0", features = ["derive"] }

[dev-dependencies]
bitcoin = "0.31.1"
